--- a/style.css
+++ b/style.css
@@ -9,13 +9,14 @@ body{
 }
 .calender{
     margin: auto;
-    margin-top: 5%;
+    margin-top: 2%;
     height: 50%;
     width: 50%;
     border: 1px solid;
     text-align: center;
     justify-content: center;
 }
+
 .month{
     text-align: center;
     background-color: white;
@@ -25,7 +26,7 @@ body{
     border: 2px solid;
     border-collapse: collapse;
 }
-.table,th, td{
+.table, td{
     width: 100px;
     height: 50px;
     font-size: larger;
@@ -45,7 +46,7 @@ body{
     width: 200px;
     margin-top: 5px;
     left: 30%;
-
+    background-color: white;
     border-radius: 50px;
 }
 .pics{
